test(01-02): add @BeforeEach cleanup for test data isolation
Clear embedding store before each test to prevent data leaking
between tests when more search tests are added.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>